syntax = "proto3";

option go_package = "pb";

package grpc_api;

service Disk {
  rpc List(ListRequest) returns (ListReply) {}
  rpc Watch(WatchRequest) returns (stream WatchReply) {}
}

message ListRequest {
  string timestamp = 1;
}

message ListReply {
  string timestamp = 1;
}

message WatchRequest {
  string timestamp = 1;
}

message WatchReply {
  string timestamp = 1;
}
